--- a/src/index.html
+++ b/src/index.html
@@ -72,10 +72,10 @@
             <img
               class="shrink-0 drop-shadow-[0px_3px_3px_rgba(0,0,0,0.20)] max-[500px]:w-[48px] max-[500px]:h-48px"
               id="logo"
-              src="/src/images/tipa-logo-basic.svg"
+              src="./images/tipa-logo-basic.svg"
               alt="Tipa logo"
-              data-logo-basic="/src/images/tipa-logo-basic.svg"
-              data-logo-advanced="/src/images/tipa-logo-advanced.svg"
+              data-logo-basic="./images/tipa-logo-basic.svg"
+              data-logo-advanced="./images/tipa-logo-advanced.svg"
             />
           </a>
           <span
