Change rule images

--- a/src/index.html
+++ b/src/index.html
@@ -245,10 +245,10 @@
         <img
           class="mx-auto"
           id="ruleImg"
-          src="images/rule-basic.svg"
+          src="./images/rule-basic.svg"
           alt="Rule of game"
-          data-basic-rule-img="/src/images/rule-basic.svg"
-          data-advanced-rule-img="/src/images/rule-advanced.svg"
+          data-basic-rule-img="./images/rule-basic.svg"
+          data-advanced-rule-img="./images/rule-advanced.svg"
         />
       </div>
     </dialog>
